Add emmy lua generator, add using vs code doc, update hidden docs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "lua",
             "request": "launch",
             "name": "Launch",
-            "program": "${workspaceFolder}/generator/genDocs.lua"
+            "program": "${workspaceFolder}/generator/main.lua"
         }
     ]
 }
