--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "Lua.diagnostics.disable": [
         "redefined-local",
         "trailing-space"
+    ],
+    "Lua.workspace.userThirdParty": [
+        "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.4.0\\am_library"
     ]
 }
