--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     ],
     "Lua.workspace.userThirdParty": [
         "c:\\\\Users\\\\maxkr\\\\Documents\\\\Code\\\\Atomontage\\\\vscode-atomontage-lua\\\\am_library",
-        "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.7\\am_library"
+        "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.7\\am_library",
+        "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.8\\am_library"
     ],
 }
