--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.8\\am_library",
         "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.9\\am_library",
         "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.11\\am_library",
-        "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.15\\am_library"
+        "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.15\\am_library",
+        "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.16\\am_library"
     ],
 }
