--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,9 @@
             "type": "lua",
             "request": "launch",
             "name": "Launch",
-            "program": "${workspaceFolder}/generator/main.lua"
+            "program": "${workspaceFolder}/generator/main.lua",
+            "luaexe": "C:/Users/maxkr/.cursor/extensions/actboy168.lua-debug-2.0.10-win32-x64/runtime/win32-x64/luajit/lua.exe",
+            "luaVersion": "luajit"
         }
     ]
 }
