--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.16\\am_library",
         "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.17\\am_library",
         "c:\\Users\\maxkr\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.18\\am_library",
-        "c:\\Users\\maxkr\\.cursor\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.18\\am_library"
+        "c:\\Users\\maxkr\\.cursor\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.18\\am_library",
+        "c:\\Users\\eksmi\\.vscode\\extensions\\atomontageinc.vscode-atomontage-lua-0.8.18\\am_library"
     ],
 }
